아동복지시설 메인, 상세 / 유채원 / 02-06 00:11 [주요내용] - 아동복지시설 검색 후 select 값 유지 	welfare-main.html
- 아동복지시설 지도, 상세 정보, 근처 아동복지시설
	welfare-detail.html, welfare-mapper.xml, Welfare.java,
	WelfareMapper.java, WelfareService.java, WelfareController.java

- 아동복지시설 상세 정보 레이아웃 깨지지 않도록 수정
	welfare-detail.html, welfare-detail.css

--- a/src/main/resources/static/css/welfare-detail.css
+++ b/src/main/resources/static/css/welfare-detail.css
@@ -210,3 +210,36 @@
   line-height: 30px; 
   margin-top: 5px;
 }
+
+
+/* 23.02.05 상세정보 수정 */
+.detailInfo {
+  min-height: 402px;  
+}
+.detailInfo dl {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  padding: 24px;
+}
+.detailInfo dl div {
+  display: flex;
+}
+.detailInfo dl div dt {
+  flex-shrink: 0;
+  width: 150px;
+  font-size: 16px;
+  font-weight: 600;
+  color: rgb(143, 143, 143);
+}
+.detailInfo dl div dt i {
+  margin-right: 10px;
+  color: #fc6c93;
+}
+.detailInfo dl div dd {
+  font-size: 16px;
+  font-weight: 600;
+}
+.detailInfo dl div:last-child dd {
+  margin-bottom: 0;
+}
