어린이집, 유치원 리뷰 완성 / 이다영 / 02-06 16:21
[주요 내용]

- 리뷰 관련 코드 추가
	kinder-detail.html / kinder-mapper.xml / KinderController.java /
	KinderMapper.java / KinderService.java / KReview.java /
	NReview.java / nursery-detail.html / nursery-mapper.xml /
	NurseryController.java / NurseryMapper.java / NurseryService.java

- 코드 수정
	kinder-main.html / kinder-detail.css / kinder-detail.js /
	nursery-main.html / nursery-detail.css / nursery-detail.js /
	button-compare.js

--- a/src/main/resources/static/css/nursery-detail.css
+++ b/src/main/resources/static/css/nursery-detail.css
@@ -303,17 +303,20 @@ li span {
   opacity: 0;
 }
 
-.reviewlist:hover .trashbtn{
+.reviewBox:hover .trashbtn{
   opacity: 1;
 }
 
 
-#seeMore{
-  border-color: #fc6c93;
+.btn-outline-pink {
+	border: 1px solid #FC6C93;
+	color: #FC6C93;
+	background-color: #FFF;
 }
 
-#seeMore :hover{
-  background-color: #ffffff;
+.btn-outline-pink:hover {
+	color: #FFF;
+	background-color: #FC6C93;
 }
 
 #reviewButton{
