--- a/src/main/resources/templates/nursery-main.html
+++ b/src/main/resources/templates/nursery-main.html
@@ -441,7 +441,7 @@
 				                <div class="photo777">
 				                  <img class="photo" th:src="|img/어린이집/nursery${img[status.index]}.JPG|">
 				                  <button class="button7" th:id="'compare' + ${nursery.no}" value="false" th:onclick="|onClickCompare('compare${nursery.no}')|">
-				                    <i class="ci-bookmark fw-bold"></i>
+				                    <i class="ci-bookmark fw-bold mt-1"></i>
 				                    <b>&nbsp;비교&nbsp;</b>
 				                  </button>
 				                  <button class="btn-wishlist1 btn-sm" th:id="'heart' + ${nursery.no}" value="false" th:onclick="|onClickHeart('heart${nursery.no}')|">
