--- a/src/main/resources/static/css/kinder-detail.css
+++ b/src/main/resources/static/css/kinder-detail.css
@@ -302,17 +302,19 @@ li span {
   opacity: 0;
 }
 
-.reviewlist:hover .trashbtn{
+.reviewBox:hover .trashbtn{
   opacity: 1;
 }
 
-
-#seeMore{
-  border-color: #fc6c93;
+.btn-outline-pink {
+	border: 1px solid #FC6C93;
+	color: #FC6C93;
+	background-color: #FFF;
 }
 
-#seeMore :hover{
-  background-color: #ffffff;
+.btn-outline-pink:hover {
+	color: #FFF;
+	background-color: #FC6C93;
 }
 
 #reviewButton{
@@ -330,7 +332,6 @@ li span {
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 1;
 }
-
 
 /* 모달 관련 */
 #msgArea {
