--- a/src/main/resources/templates/mypage-3.html
+++ b/src/main/resources/templates/mypage-3.html
@@ -84,7 +84,6 @@
 		<div class="container pb-5 mb-2 mb-md-4 cgw1">
 			<div class="row">
 				<!-- Sidebar-->
-				<form action="/mypage3" method="get">
 				<aside class="col-lg-4 pt-4 pt-lg-0 pe-xl-5">
 					<h1 class="h3 text-white cgw5">마이페이지</h1>
 					<div class="bg-white rounded-3 shadow-lg pt-1 mb-5 mb-lg-0">
@@ -92,8 +91,8 @@
 							class="d-md-flex justify-content-between align-items-center text-center text-md-start p-4">
 							<div class="d-md-flex align-items-center">
 								<div class="ps-md-3">
-									<h3 class="fs-base mb-0">유키즈</h3>
-									<span class="cgw3 fs-sm">ukids@multi.com</span>
+									<h3 class="fs-base mb-0">[[${session.loginMember.name}]]</h3>
+									<span class="cgw3 fs-sm">[[${session.loginMember.email}]]</span>
 								</div>
 							</div>
 							<a class="btn btn-primary d-lg-none mb-2 mt-3 mt-md-0"
@@ -106,46 +105,36 @@
 								<h3 class="fs-sm mb-0 text-muted">마이페이지</h3>
 							</div>
 							<ul class="list-unstyled mb-0">
-								<li class="border-bottom mb-0">
-									<div class="cgw3 d-flex align-items-center px-4 py-3">
-										<i class="ci-user opacity-60 me-2"></i>회원정보 수정
-									</div>
-								</li>
-								<li class="border-bottom mb-0"><a
-									class="nav-link-style d-flex align-items-center px-4 py-3"
-									th:href="@{/mypage2}"><i class="ci-edit opacity-60 me-2"></i>입소
-										신청 조회<span class="fs-sm text-muted ms-auto">1</span></a></li>
-								<li class="border-bottom mb-0"><a
-									class="nav-link-style d-flex align-items-center px-4 py-3"
-									th:href="@{/mypage3}"><i class="ci-heart opacity-60 me-2"></i>찜<span
-										class="fs-sm text-muted ms-auto">3</span></a></li>
-								<li class="border-bottom mb-0"><a
-									class="nav-link-style d-flex align-items-center px-4 py-3"
-									th:href="@{/mypage4}"><i class="ci-edit opacity-60 me-2"></i>불편사항
-										신고 조회<span class="fs-sm text-muted ms-auto">3</span></a></li>
-								<li class="border-bottom mb-0"><a
-									class="nav-link-style d-flex align-items-center px-4 py-3"
-									th:href="@{/mypage5}"><i class="ci-document opacity-60 me-2"></i>내가
-										쓴 게시글<span class="fs-sm text-muted ms-auto">3</span></a></li>
-								<li class="border-bottom mb-0"><a
-									class="nav-link-style d-flex align-items-center px-4 py-3"
-									th:href="@{/mypage6}"><i class="ci-bag opacity-60 me-2"></i>대여
-										내역 조회<span class="fs-sm text-muted ms-auto">3</span></a></li>
-								<li class="border-bottom mb-0"><a
-									class="nav-link-style d-flex align-items-center px-4 py-3"
-									th:href="@{/mypage7}"><i class="ci-cart opacity-60 me-2"></i>장바구니<span
-										class="fs-sm text-muted ms-auto">3</span></a></li>
-								<li class="border-bottom mb-0">
-									<div class="nav-link-style d-flex align-items-center px-4 py-2">
-										<a class="fs-sm ms-auto btn btn-logout btn-sm" href="#"><i
-											class="ci-sign-out me-2"></i>로그아웃</a>
-									</div>
-								</li>
-							</ul>
+                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
+                    th:href="@{/mypage}"><i class="ci-user opacity-60 me-2"></i>회원정보 수정</a></li>
+                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
+                    th:href="@{/mypage-2}"><i class="ci-edit opacity-60 me-2"></i>입소 신청 조회<span
+                      class="fs-sm text-muted ms-auto">1</span></a></li>
+                <li class="border-bottom mb-0">
+                  <div class="cgw3 d-flex align-items-center px-4 py-3"><i class="ci-heart opacity-60 me-2"></i>찜<span
+                      class="fs-sm text-muted ms-auto">3</span></div>
+                </li>
+                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
+                    th:href="@{/mypage-4}"><i class="ci-edit opacity-60 me-2"></i>불편사항 신고 조회<span
+                      class="fs-sm text-muted ms-auto">3</span></a></li>
+                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
+                    th:href="@{/mypage-5}"><i class="ci-document opacity-60 me-2"></i>내가 쓴 게시글<span
+                      class="fs-sm text-muted ms-auto">3</span></a></li>
+                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
+                    th:href="@{/mypage-6}"><i class="ci-bag opacity-60 me-2"></i>대여 내역 조회<span
+                      class="fs-sm text-muted ms-auto">3</span></a></li>
+                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
+                    th:href="@{/mypage-7}"><i class="ci-cart opacity-60 me-2"></i>장바구니<span
+                      class="fs-sm text-muted ms-auto">3</span></a></li>
+                <li class="border-bottom mb-0">
+                  <div class="nav-link-style d-flex align-items-center px-4 py-2"><a
+                      class="fs-sm ms-auto btn btn-logout btn-sm" href="#"><i class="ci-sign-out me-2"></i>로그아웃</a>
+                  </div>
+                </li>
+              </ul>
 						</div>
 					</div>
 				</aside>
-				</form>
 				<!-- Content  -->
 				<section class="col-lg-8">
 					<!-- Toolbar-->
@@ -177,10 +166,8 @@
 									<a class="nav-link-style fs-sm stretched-link"
 										href="nft-vendor.html">
 										<div class="card-footer mt-n1 py-0 border-0 mb-3">
-											<div
-												class="d-flex align-items-center position-relative py-3 mt-2">
-												<a class="nav-link-style fs-sm stretched-link"
-													href="nft-vendor.html">서울유치원</a>
+											<div class="d-flex align-items-center position-relative py-3 mt-2">
+												<a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">서울유치원</a>
 											</div>
 											<i class="ci-location me-2 cgw16 fs-ms cgw27"></i>
 											<div class="fs-ms text-muted cgw24">서울특별시 어딘가 서울특별시 어딘가
